--- a/refs.bib
+++ b/refs.bib
@@ -1565,10 +1565,9 @@ archivePrefix = {arXiv},
 }
 
 @article{desi2023sv,
-  title={XXXXXXX},
-  author={{DESI Collaboration in}},
-  journal={XXXX},
-  year={prep}
+  author = {{DESI Collaboration et al.}},
+  year = 2023,
+  note = {in preparation}
 }
 
 @ARTICLE{2011ApJ...737..103S,
@@ -2120,3 +2119,12 @@ archivePrefix = {arXiv},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.102.021302}
 }
 
+
+@article{dugas2001incorporating,
+  title={Incorporating second order functional knowledge into learning algorithms},
+  author={Dugas, C and Bengio, Y and B{\'e}lisle, F and Nadeau, C},
+  journal={Advances in Neural Information Processing Systems},
+  volume={13},
+  pages={472--478},
+  year={2001}
+}
