--- a/sections/authorlist.tex
+++ b/sections/authorlist.tex
@@ -4,7 +4,11 @@
 Lado Samushia$^{1}$, Edmond Chaussidon$^{7}$, Alex Krolewski$^{8,9, 10}$, Arnaud de Mattia$^{7}$,\newauthor
 Santiago Avila$^{5}$, Benedict Bahr-Kalus$^{11}$, Jose R. Bermejo-Climent$^{12}$, Florian Beutler$^{6}$,\newauthor 
 Klaus Honscheid$^{2,13}$, Eva-Maria Mueller$^{14,15}$, Adam Myers$^{16}$, Jeffrey A. Newman$^{17}$,\newauthor
-Nathalie Palanque-Delabrouille$^{4,7}$, Will Percival$^{8,9,10}$, Christophe Yeche$^{7}$
+Nathalie Palanque-Delabrouille$^{4,7}$, Will Percival$^{8,9,10}$, Christophe Yeche$^{7}$, Jessica \newauthor Nicole Aguilar$^{4}$, Steven Ahlen$^{18}$, David Brooks$^{19}$, Axel de la Macorra$^{20}$, Peter Doel$^{19}$, \newauthor
+Jaime E. Forero-Romero$^{21}$, Julien Guy$^{4}$, Martin Landriau$^{4}$, Michael E. Levi$^{4}$, Marc\newauthor Manera$^{5}$, Aaron Meisner$^{22}$, Ramon Miquel$^{5,23}$, Jundan Nie$^{24}$, Claire Poppett$^{4, 25}$, \newauthor 
+Graziano Rossi$^{26}$,
+Eusebio Sanchez$^{27}$, Gregory Tarlé$^{28}$,
+Benjamin Alan Weaver$^{22}$,\newauthor Zhimin Zhou$^{24}$
 \\~\\
 % List of institutions
 $^{1}$Department of Physics, Kansas State University, 116 Cardwell Hall, Manhattan, KS 66506, USA\\
@@ -23,5 +27,19 @@ $^{13}$Department of Physics, The Ohio State University, 191 West Woodruff Avenu
 $^{14}$Institute of Cosmology and Gravitation, Dennis Sciama Building, University of Portsmouth, Portsmouth PO1 3FX, UK \\
 $^{15}$Department of Physics \& Astronomy, University of Sussex, Brighton BN1 9QH, UK\\
 $^{16}$Department of Physics and Astronomy, University of Wyoming, Laramie, WY 82071, USA\\
-$^{17}$Department of Physics and Astronomy and PITT PACC, University of Pittsburgh, Pittsburgh, PA 15260, USA
+$^{17}$Department of Physics and Astronomy and PITT PACC, University of Pittsburgh, Pittsburgh, PA 15260, USA\\
+$^{18}$Physics Department, Boston University, 590 Commonwealth Avenue, Boston, MA 02215,
+USA\\
+$^{19}$Department of Physics and Astronomy, University College London, Gower Street, London,
+WC1E 6BT, UK\\
+$^{20}$Instituto de Física, Universidad Nacional Autónoma de México, Cd. de México C.P. 04510,
+México\\
+$^{21}$Departamento de F\'isica, Universidad de los Andes, Cra. 1 No. 18A-10, Edificio Ip, CP 111711, Bogot\'a, Colombia\\
+$^{22}$NSF's NOIRLab, 950 N. Cherry Ave., Tucson, AZ 85719, USA\\
+$^{23}$Instituci\'{o} Catalana de Recerca i Estudis Avan\c{c}ats, Passeig de Llu\'{\i}s Companys, 23, 08010 Barcelona, Spain\\
+$^{24}$National Astronomical Observatories, Chinese Academy of Sciences, A20 Datun Rd., Chaoyang District, Beijing, 100012, P.R. China\\
+$^{25}$Space Sciences Laboratory, University of California, Berkeley, 7 Gauss Way, Berkeley, CA 94720, USA\\
+$^{26}$Department of Physics and Astronomy, Sejong University, Seoul, 143-747, Korea\\
+$^{27}$CIEMAT, Avenida Complutense 40, E-28040 Madrid, Spain\\
+$^{28}$University of Michigan, Ann Arbor, MI 48109, USA
 }
