--- a/ms.tex
+++ b/ms.tex
@@ -7,7 +7,7 @@
 
 \title[PNG with DESI Imaging]{Local primordial non-Gaussianity from the large-scale clustering of photometric DESI luminous red galaxies}
 
-\input{sections/authorlist}
+%\input{sections/authorlist}
 
 % Don't change these lines
 \begin{document}
@@ -15,7 +15,6 @@
 \pagerange{\pageref{firstpage}--\pageref{lastpage}}
 %:
 \maketitle
-
 
 \input{sections/abstract}
 
